# fmodTest

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/fmodtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common_platform.cpp  effect_fix.cpp  native-lib.cpp  play_sound.cpp
app/src/main/java/com/example/administrator/fmodtest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/fmodtest/: ExampleUnitTest.kt  MainActivityTest.java
